--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -12,7 +12,7 @@ body {
 }
 
 .container {
-  max-width: 800px;
+  max-width: 1100px;
   min-height: 800px;
   border-left: 1px solid #ccc;
   border-right: 1px solid #ccc;
@@ -27,10 +27,16 @@ section {
 }
 
 a {
-  color: #1e6bb8;
-  text-decoration: none; }
+  color: #606c71;
+  text-decoration: underline; }
   a:hover {
     text-decoration: underline; }
+
+a.navigation {
+    color: white;
+    text-decoration: none; }
+    a:hover {
+      text-decoration: underline; }
 
 .button {
     border: 2px solid #ccc;
@@ -106,7 +112,8 @@ form div {
 
 img.center {
     display: block;
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 
@@ -119,7 +126,7 @@ ul.navigation {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: #B22222;
 }
 
 li.navigation {
